--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <!-- Copyright 2022 Matt Kraai. Distributed under the BSD License -->
     <head>
         <title>Temporary MFA Code Generator</title>
         <script src="sha.js"></script>
